cabal-version:      3.0
name:               poker
version:            0.1.0.0
synopsis:           Compute probabilities for various poker related things.
description:        None
author:             Amy Huang
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    exposed-modules:  Poker
    build-depends:    base ^>=4.17.0.0,
    hs-source-dirs:   .
    default-language: Haskell2010

executable main
    import:           warnings
    main-is:          main.hs
    ghc-options:      -threaded -O2 -rtsopts
    build-depends:    poker,
                      base ^>=4.17.0.0,
                      optparse-applicative ^>=0.18.0.0,
                      parallel ^>=3.2.2.0,
                      random ^>=1.2.0.0,
                      random-shuffle ^>=0.0.4
    hs-source-dirs:   .
    other-modules:    Poker
    default-language: Haskell2010

Test-Suite poker-test
    type: exitcode-stdio-1.0
    hs-source-dirs: .
    main-is: poker_test.hs
    build-depends: HUnit ^>=1.6.2.0,
                   base ^>=4.17.0.0,
                   random ^>=1.2.0.0,
                   random-shuffle ^>=0.0.4,
                   poker
    other-modules: Poker
    default-language: Haskell2010
